# awesome-skills

./: .gitignore  README.md  README_zh.md  canvas-architect.skill
.claude-plugin/: plugin.json
Conventions/: ARCHITECTURE-TEMPLATE.md  PLANS-UNIVERSAL.md  VIBE-CODING-STANDARD.md
Resource/docs-resource/: ARCHITECTURE.md  Harness engineering-leveraging Codex in an agent-first world.md
SOUL/: SKILL.md
SOUL/evals/: evals.json  evals_zh.json
Workflow/: WORKFLOW.md
article-diagram/: SKILL.md  package-lock.json  package.json  pyproject.toml
article-diagram-en/: SKILL.md  package.json  pyproject.toml
article-diagram-en/scripts/: svg-to-jpeg.js
article-diagram/references/: design-spec.md
article-diagram/scripts/: generate_diagram.py  svg-to-jpeg.js  validate_svg.py
canvas-architect/: SKILL.md
canvas-sequence/: SKILL.md
canvas-sequence/evals/: evals.json
canvas-visualization-resource/: ascii-visualization-prompt.md  obsidian-canvas-arch.json  obsidian-canvas-sequence.json
claude-code-skill-creator/: SKILL.md
cycle-investment-analysis/: SKILL.md
docs/: wechat-article-vibe-coding-launcher.md
glue-engineering-resource/: code-integrity-audit-prompt.md  glue-engineering-requirements-prompt.md  problem-description-prompt.md
skill-creator/: SKILL.md
skills/article-diagram/: SKILL.md
skills/baidu-search/: SKILL.md
skills/canvas-architect/: SKILL.md
skills/cycle-investment-analysis/: SKILL.md
vibe-coding-launcher/: SKILL.md
wechat-article-writer/: SKILL.md  skill.json
xhs-automator/: CLAUDE.md  pyproject.toml
(+99 files in other folders)
